--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
 <head>
 	<meta charset="utf-8">
 	<title>Cardgame</title>
-	<link href="css/game.css" rel="stylesheet">
+	<link href="./css/game.css" rel="stylesheet">
 </head>
 
 <body>
 
 <div id="field"></div>
 		
-	<script src="js/memory.js" type="module"></script>
+	<script src="./js/memory.js" type="module"></script>
 </body>
 
 </html>
