Doubled the cards and added fisher yates shuffle

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 <div id="field"></div>
 		
 	<script src="./js/memory.js" type="module"></script>
+	<!-- <script src="./js/memoryClass.js" type="module"></script> -->
 </body>
 
 </html>
