working on size playfield

--- a/index.html
+++ b/index.html
@@ -10,6 +10,13 @@
 <body>
 
 <div id="field"></div>
+
+<select name="speelveld" id="speelveld">
+  <option selected disabled value="veld">Kies een speelveld</option>
+  <option value="4">4 x 4</option>
+  <option value="5">5 x 5</option>
+  <option value="6">6 x 6</option>
+</select>
 		
 	<script src="./js/memory.js" type="module"></script>
 </body>
