--- a/index.html
+++ b/index.html
@@ -23,6 +23,21 @@
     </div>
   </div>
   <div id="field"></div>	
+  <div id="high-scores">
+    <table>
+      <thead>
+        <tr>
+          <th>Positie</th>
+          <th>pogingen</th>
+          <th>succesvol</th>
+          <th>tijd</th>
+          <th>grootte veld</th>
+        </tr>
+      </thead>
+      <tbody id="high-scores-list">
+      </tbody>
+    </table>
+  </div>
 	<script src="./js/memory.js" type="module"></script>
 </body>
 </html>
